text editing + css fixes for mobile

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -36,6 +36,7 @@ header div.intro h1 small a:hover {color:black;}
 header div.intro h1 s {display:none;}
 header div.intro p {float:left;width:100%;font-style:italic;font-size:2.6vw;line-height:3.6vw;}
 header div.intro p a {font-family:"Fjalla One", sans-serif;}
+header div.intro p strong {font-weight:normal;}
 header div.intro button {width:auto;font-size:2.4vw;padding:2% 10%;margin-top:0.5em;}
 header div.intro button:hover {border-color:black;color:black;}
 header div.intro a.animated {float:right;margin-right:-30px;margin-top:50px;font-size:12px;text-align:center;}
@@ -50,7 +51,7 @@ header div.intro a.animated:hover span, header div.intro a.animated:hover span s
 #bio p.intro strong, #bio p a {font-family:"Fjalla One", sans-serif;font-weight:400;font-style:normal;text-transform:uppercase;}
 #bio div {-webkit-column-count:2;-moz-column-count:2;column-count:2;width:60%;margin:0 auto;max-width:740px;}
 #bio h2, #bio h3 {color:black;}
-#bio h3 {border-bottom:1px solid black;-}
+#bio h3 {border-bottom:1px solid black;}
 #bio p a {font-size:16px;}
 
 #recent-work {background:url(../images/desk-angle.jpg) center top;background-attachment:fixed;background-size:cover;color:white;position:relative;float:left;width:100%;height:auto;text-align:center;}
@@ -68,10 +69,11 @@ header div.intro a.animated:hover span, header div.intro a.animated:hover span s
 #work li {display:inline;float:left;width:30%;background-color:white;border-top:solid 3px #FAC200;flex:1;margin-bottom:5em;}
 #work li:nth-child(2){margin-left:5%;margin-right:5%;}
 #work li h4 {padding:1em;padding-bottom:0.4em;}
+#work li h4 small {float:right;color:#666;}
 #work h4 {padding-bottom:0;}
 #work li a figure {position:relative;}
 #work li a figure img {width:100%;height:auto;-webkit-filter: grayscale(1); -webkit-filter: grayscale(100%);filter: gray; filter: grayscale(100%);filter: url(desaturate.svg#greyscale);border-bottom:solid 3px black;}
-#work li a figure figcaption {opacity:0;margin-top:-5em;position:absolute;padding:1em;font-family:Georgia, "Times New Roman", Times, serif;font-style:italic;text-align:center;background-color:black;color:white;width:100%;}
+#work li a figure figcaption {font-size:16px;opacity:0;margin-top:-5em;position:absolute;padding:1em;font-family:Georgia, "Times New Roman", Times, serif;font-style:italic;text-align:center;background-color:black;color:white;width:100%;}
 #work li a:hover, #work li a:focus {color:white;}
 #work li a:hover figure img, #work li a:focus figure img {-webkit-filter:none;-webkit-filter:none;filter:none;filter:none;filter:none;opacity:0;}
 #work li a figure img.replace {position:absolute;top:0;left:0em;opacity:0;-webkit-filter: blur(3px);filter:blur(3px);}
@@ -131,9 +133,10 @@ footer nav a {display:inline;text-decoration:none;}
 	header.flexbox {display:-webkit-block;display:-ms-block;display:block;overflow:hidden;}
 	
 	header div {width:100%;height:auto;float:left;flex:none;position:relative;height:580px;}
-	header div img {width:100%;height:auto;position:absolute;bottom:-30%;left:2%;}
+	header div img {width:100%;height:auto;position:absolute;bottom:-50%;left:2%;}
 	header div.intro {width:100% !important;float:left;height:auto;}
 	header div.intro p {font-size:36px;line-height:38px;margin-bottom:0;text-align:center;}
+	header div.intro p strong {display:block;}
 	header div.intro button {width:100%;font-size:28px;}
 	header div.intro h1 {font-size:12vw;}
 	header div.intro h1 small {font-size:18px;width:50%;margin-left:0%;bottom:-10%;}
@@ -141,13 +144,20 @@ footer nav a {display:inline;text-decoration:none;}
 	
 	#bio p.intro {width:90%;}
 	#bio div {-webkit-column-count:1;-moz-column-count:1;column-count:1;width:90%;margin:0 auto;}
+	#bio h3 {font-size:20px;}
 	
 	#recent-work {background-attachment:scroll;}
 	#recent-work p {width:100%;}
 	#recent-work img {width:40%;}
 	
-	#work li {width:100%;}
+	#work {padding-bottom:0;}
+	#work li {width:100%;margin-bottom:8em;}
+	#work li h4 {font-size:18px;}
 	#work li:nth-child(2){margin-left:0;margin-right:0;}
+	#work li a {color:white;}
+	#work li a figure img, #work li a:focus figure img {-webkit-filter:none;-webkit-filter:none;filter:none;filter:none;filter:none;opacity:0;}
+	#work li a figure img.replace, #work li a:focus figure img.replace {opacity:1;-webkit-filter:none;filter:none;}
+	#work li a figure figcaption, #work li a:focus figure figcaption {margin-top:-0.1em;opacity:1;}
 	
 	#stats h2 {margin-bottom:10%;}
 	#stats p {display:none;}
@@ -179,7 +189,7 @@ footer nav a {display:inline;text-decoration:none;}
 	header.flexbox {display:-webkit-block;display:-ms-block;display:block;overflow:hidden;}
 	
 	header div {width:100%;height:auto;float:left;flex:none;position:relative;height:240px;}
-	header div img {width:100%;height:auto;position:absolute;bottom:-60%;left:2%;}
+	header div img {width:100%;height:auto;position:absolute;bottom:-50%;left:2%;}
 	header div.intro {width:100%;float:left;}
 	header div.intro p {font-size:18px;line-height:24px;margin-bottom:0;text-align:center;}
 	header div.intro button {width:100%;font-size:28px;}
@@ -194,6 +204,7 @@ footer nav a {display:inline;text-decoration:none;}
 	#recent-work p {display:none;}
 	#recent-work img {width:80%;}
 	
+	#work {padding-bottom:5%;}
 	#work li {width:100%;}
 	#work li:nth-child(2){margin-left:0;margin-right:0;}
 	
