uploding new images

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -109,7 +109,7 @@ header div.intro a.animated:hover span, header div.intro a.animated:hover span s
 #personal li.soccer a {background-image:url(../images/softwares-techniques/soccer.png);}
 #personal li.chocolate a {background-image:url(../images/softwares-techniques/chocolate.png);}
 #personal li.philz-coffee a {background-image:url(../images/softwares-techniques/philz-coffee.png);}
-#personal li.italy a {background-image:url(../images/softwares-techniques/italy.png);}
+#personal li.maps a {background-image:url(../images/softwares-techniques/maps.png);}
 
 #personal li.evernote a {background-image:url(../images/softwares-techniques/evernote.png);}
 #personal li.pomodoro a {background-image:url(../images/softwares-techniques/pomodoro.png);}
