--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -4,6 +4,8 @@
 img {border:none;}
 
 body {font-size:100%;font-family:Arial, sans-serif;color:black;}
+div.loader-canvas {background-color:#FAC200;width:100%;height:100%;position:absolute;top:0;left:0;z-index:99999;}
+.loader {position:fixed;z-index:100;left:50%;top:50%;margin-left:-20px;transition: all .5s;-webkit-animation: loaderSpin 2s infinite; /* Chrome, Safari, Opera */animation: loaderSpin 2s infinite;}
 
 h1, h2, h3, h4, h5, h6 {font-weight:400;color:black;margin-bottom:0.5em;font-family:"Fjalla One", sans-serif;}
 h1 {font-size:6vw;}
@@ -93,14 +95,14 @@ header div.intro a.animated:hover span, header div.intro a.animated:hover span s
 #personal {background-color:#272727;padding:5%;color:white;}
 #personal h2 {color:white;border-color:white;margin-bottom:5%;}
 #personal li {display:inline;float:left;width:20%;height:50%;background-position:center center;background-repeat:no-repeat;background-size:cover;overflow:hidden;}
-#personal li a {float:left;background-color:#333;background-color:rgba(30, 30, 30, 0.7);width:100%;height:18vw;text-align:center;padding:5%;display:block;background-repeat:no-repeat;background-position:top center;background-size:0%;}
+#personal li a {float:left;background-color:#333;background-color:rgba(30, 30, 30, 0.7);width:100%;height:18vw;text-align:center;padding:5%;display:block;background-repeat:no-repeat;background-position:0 -1000px;background-size:100%;}
 #personal li:nth-child(even) a {background-color:#666;background-color:rgba(60, 60, 60, 0.7);}
 #personal li a strong {color:white;display:block;font-size:2em;font-family:Georgia, "Times New Roman", Times, serif;font-weight:normal;font-style:italic;margin-top:40%;}
 #personal li a hr {width:10%;margin:0.5em auto 1em auto;border:none;border-top:2px solid #FAC200;}
 #personal li a:hover hr, #personal li a:focus hr {width:50%;border-color:black;}
 #personal li a small {opacity:0;font-size:1.2em;color:white;}
 #personal li a small img {display:block;opacity:0;margin:0 auto;}
-#personal li a:hover, #personal li a:focus {background-size:100%;background-color:#FAC200;}
+#personal li a:hover, #personal li a:focus {background-position:0 0;}
 #personal li a:hover strong, #personal li a:focus strong {margin-top:30%;color:black;}
 #personal li a:hover small, #personal li a:focus small {opacity:1;margin:0;color:black;}
 #personal li a:hover small img {opacity:1;}
@@ -125,16 +127,17 @@ footer nav a {display:inline;text-decoration:none;}
 
 /* Media Queries */
 /* Smaller Screens ----------- */
-@media only screen and (max-width:960px){
+@media only screen and (max-width:1023px){
 	nav.breadcrumb {right:0.8em;}
 	
 	section {padding:10%;}
 	
 	header.flexbox {display:-webkit-block;display:-ms-block;display:block;overflow:hidden;}
 	
-	header div {width:100%;height:auto;float:left;flex:none;position:relative;height:580px;}
+	header div {width:100%;height:auto;float:left;flex:none;position:relative;height:80%;}
 	header div img {width:100%;height:auto;position:absolute;bottom:-50%;left:2%;}
-	header div.intro {width:100% !important;float:left;height:auto;}
+	header div.intro.col {width:100% !important;float:left;height:40%;margin-top:0;}
+	header div.col {margin-top:115%;}
 	header div.intro p {font-size:36px;line-height:38px;margin-bottom:0;text-align:center;}
 	header div.intro p strong {display:block;}
 	header div.intro button {width:100%;font-size:28px;}
@@ -173,6 +176,19 @@ footer nav a {display:inline;text-decoration:none;}
 	#personal li a {height:38vw;}
 }
 
+/* Smaller Screens ----------- */
+@media only screen and (max-width:1024px) and (orientation:landscape){
+	#stats p {font-size:26px;}
+	
+	#stats li i {font-size:4em;}
+	#stats li big {font-size:4em;margin-bottom:0.1em;}
+	#stats li small {font-size:1em;}
+	#stats li:hover i {font-size:4em;}
+	
+	#personal li a strong {font-size:1.4em;}
+	#personal li a small {font-size:1em;}
+}
+
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-width:320px) and (max-width:480px){
 	body {font-size:80%;}
@@ -188,17 +204,21 @@ footer nav a {display:inline;text-decoration:none;}
 	
 	header.flexbox {display:-webkit-block;display:-ms-block;display:block;overflow:hidden;}
 	
+	header div.intro.col {width:100% !important;float:left;height:auto;margin-top:0;}
+	header div.col {margin-top:0;}
 	header div {width:100%;height:auto;float:left;flex:none;position:relative;height:240px;}
 	header div img {width:100%;height:auto;position:absolute;bottom:-50%;left:2%;}
 	header div.intro {width:100%;float:left;}
-	header div.intro p {font-size:18px;line-height:24px;margin-bottom:0;text-align:center;}
-	header div.intro button {width:100%;font-size:28px;}
-	header div.intro h1 small {font-size:13px;width:70%;margin-left:-10%;bottom:-15%;}
+	header div.intro p {font-size:18px;line-height:24px;margin-bottom:0;text-align:center;padding:0;}
+	header div.intro button {width:90%;font-size:28px;margin-left:5%;}
+	header div.intro h1 small {font-size:12px;width:70%;margin-left:-10%;bottom:-15%;}
 	header div.intro a.animated {display:none}
 	
 	#bio {padding-top:15%;}
-	#bio p.intro {font-size:20px;line-height:32px;width:90%;}
+	#bio p.intro big {font-size:18px;line-height:24px;width:90%;}
+	#bio p.intro {font-size:18px;line-height:24px;width:90%;}
 	#bio div {-webkit-column-count:1;-moz-column-count:1;column-count:1;width:90%;margin:0 auto;}
+	#bio div p {font-size:16px;line-height:26px;}
 	
 	#recent-work {background-attachment:scroll;}
 	#recent-work p {display:none;}
@@ -223,7 +243,9 @@ footer nav a {display:inline;text-decoration:none;}
 	#personal li a strong {font-size:1.4em;}
 	#personal li a:hover strong, #personal li a:focus strong {margin-top:25%;}
 	
+	footer {padding:5% 10%;}
 	footer a.phone {width:100%;font-size:28px;border:solid 3px black;margin:0.5em 0;padding: 2% 10%;font-family: "Fjalla One", sans-serif;font-weight: normal;}
+	footer a {font-size:18px;}
 }
 
 /*Animations*/
@@ -235,3 +257,32 @@ a.bounce {
 	-webkit-animation-iteration-count: infinite;
 			animation-iteration-count: infinite;
 }
+
+/* Chrome, Safari, Opera */
+@-webkit-keyframes loaderSpin {
+    0%   {
+	   	-ms-transform: rotate(0deg); /* IE 9 */
+	    -webkit-transform: rotate(0deg); /* Chrome, Safari, Opera */
+	    transform: rotate(0deg);
+    }
+    100% {
+    		   	-ms-transform: rotate(360deg); /* IE 9 */
+	    -webkit-transform: rotate(360deg); /* Chrome, Safari, Opera */
+	    transform: rotate(360deg);
+	}
+}
+
+/* Standard syntax */
+@keyframes loaderSpin {
+    0%   {
+	   	-ms-transform: rotate(0deg); /* IE 9 */
+	    -webkit-transform: rotate(0deg); /* Chrome, Safari, Opera */
+	    transform: rotate(0deg);
+    }
+    100% {
+    	-ms-transform: rotate(360deg); /* IE 9 */
+	    -webkit-transform: rotate(360deg); /* Chrome, Safari, Opera */
+	    transform: rotate(360deg);
+	}
+}
+
