--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -4,7 +4,7 @@
 img {border:none;}
 
 body {font-size:100%;font-family:Arial, sans-serif;color:black;}
-div.loader-canvas {background-color:#FAC200;width:100%;height:100%;position:absolute;top:0;left:0;z-index:99999;}
+.loader-canvas {-webkit-transition:none;-moz-transition: none;-o-transition:none;transition:none;background-color:#FAC200;width:100%;height:100%;position:absolute;top:0;left:0;z-index:99999;}
 .loader {position:fixed;z-index:100;left:50%;top:50%;margin-left:-20px;transition: all .5s;-webkit-animation: loaderSpin 2s infinite; /* Chrome, Safari, Opera */animation: loaderSpin 2s infinite;}
 
 h1, h2, h3, h4, h5, h6 {font-weight:400;color:black;margin-bottom:0.5em;font-family:"Fjalla One", sans-serif;}
