--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -248,6 +248,9 @@ footer nav a {display:inline;text-decoration:none;}
 	footer a {font-size:18px;}
 }
 
+@media only screen and (max-width:568px) and (max-height:320px) and (orientation:landscape){
+	header div.intro h1 small {font-size:16px;width:60%;margin-left:-5%;bottom:-15%;}
+}
 /*Animations*/
 a.bounce {
     -webkit-animation-duration: 2s;
