new favorite, remove pomodoro add b3

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -114,7 +114,7 @@ header div.intro a.animated:hover span, header div.intro a.animated:hover span s
 #personal li.maps a {background-image:url(../images/softwares-techniques/maps.png);}
 
 #personal li.evernote a {background-image:url(../images/softwares-techniques/evernote.png);}
-#personal li.pomodoro a {background-image:url(../images/softwares-techniques/pomodoro.png);}
+#personal li.basecamp a {background-image:url(../images/softwares-techniques/basecamp.png);}
 #personal li.terminal a {background-image:url(../images/softwares-techniques/terminal.png);}
 #personal li.textmate a {background-image:url(../images/softwares-techniques/textmate.png);}
 #personal li.axure a {background-image:url(../images/softwares-techniques/axure.png);}
