--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -27,14 +27,14 @@ nav.breadcrumb a:hover, nav.breadcrumb a.selected {background-color:black;}
 /* Sections */
 section {float:left;width:100%;padding:5%;overflow:hidden;}
 
-header {background-color:#FAC200;overflow:hidden;position:relative;padding:0;}
+header {background-color:#FFF;overflow:hidden;position:relative;padding:0;}
 header div {width:45%;height:auto;float:right;flex:1;position:relative;}
-header div img {width:auto;height:100%;position:absolute;bottom:0;}
+header div img {width:auto;height:100%;position:absolute;bottom:0;-webkit-filter: grayscale(100%);filter: grayscale(100%);}
 header div.intro {float:left;width:55%;padding:5%;}
-header div.intro h1 {float:left;text-transform:uppercase;text-align:center;padding:0.1em 0;color:white;border:solid 3px white;border-left:none;border-right:none;position:relative;width:100%;}
-header div.intro h1 small {font-size:1.2vw;color:white;background-color:#FAC200;position:absolute;bottom:-10%;left:20%;width:60%;text-align:center;}
-header div.intro h1 small a {color:white;}
-header div.intro h1 small a:hover {color:black;}
+header div.intro h1 {float:left;text-transform:uppercase;text-align:center;padding:0.1em 0;color:black;border:solid 3px black;border-left:none;border-right:none;position:relative;width:100%;}
+header div.intro h1 small {font-size:1.2vw;color:black;background-color:#FFF;position:absolute;bottom:-10%;left:20%;width:60%;text-align:center;}
+header div.intro h1 small a {color:black;}
+header div.intro h1 small a:hover {text-decoration:underline;}
 header div.intro h1 s {display:none;}
 header div.intro p {float:left;width:100%;font-style:italic;font-size:2vw;line-height:2.6vw;}
 header div.intro p a {font-family:"Fjalla One", sans-serif;}
