--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -40,13 +40,13 @@ header div.intro p {float:left;width:100%;font-style:italic;font-size:2vw;line-h
 header div.intro p a {font-family:"Fjalla One", sans-serif;}
 header div.intro p strong {font-weight:normal;}
 header div.intro button {width:auto;font-size:2.4vw;padding:2% 10%;margin-top:0.5em;}
-header div.intro button:hover {border-color:black;color:black;}
+header div.intro button:hover {border-color:#999;color:#999;}
 header div.intro a.animated {float:right;margin-right:-30px;margin-top:50px;font-size:12px;text-align:center;}
 header div.intro a.animated i {display:block;font-size:4vw;}
-header div.intro a.animated:hover i {color:white;}
-header div.intro a.animated span {color:#FAC200;font-size:1.2em;font-family:Georgia, "Times New Roman", Times, serif;}
+header div.intro a.animated:hover i {color:black;}
+header div.intro a.animated span {color:#FFF;font-size:1.2em;font-family:Georgia, "Times New Roman", Times, serif;}
 header div.intro a.animated span strong {display:block;font-size:3em;margin-top:-0.5em;}
-header div.intro a.animated:hover span, header div.intro a.animated:hover span strong {color:white;}
+header div.intro a.animated:hover span, header div.intro a.animated:hover span strong {color:#999;}
 
 #bio {padding:5%;}
 #bio p.intro, #recent-work p, #stats p {font-size:28px;line-height:44px;width:60%;font-style:italic;text-align:center;margin:0 auto;border-top:3px solid black;padding-top:2em;margin-bottom:2em;max-width:740px;}
@@ -82,7 +82,7 @@ header div.intro a.animated:hover span, header div.intro a.animated:hover span s
 #work li a:hover figure img.replace, #work li a:focus figure img.replace {opacity:1;-webkit-filter:none;filter:none;}
 #work li a:hover figure figcaption, #work li a:focus figure figcaption {margin-top:-0.1em;opacity:1;}
 
-#stats {background-color:#FAC200;}
+#stats {background-color:#FFF;}
 #stats li {width:25%;display:inline;float:left;text-align:center;font-size:1.2em;color:#BE8900;font-family:"Fjalla One", sans-serif;font-weight:normal;}
 #stats li strong {font-weight:normal;color:black;}
 #stats li i {width:50%;height:auto;display:block;margin:0 auto 0.3em auto;font-size:6em;text-align:center;float:left;width:100%;}
