--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -13,7 +13,7 @@ h2 {font-size:24px;text-align:center;border-top:2px solid black;padding-top:0.5e
 h2 strong {font-weight:300;}
 h3 {font-size:20px;color:white;}
 p {font-size:18px;margin-bottom:32px;line-height:32px;font-family:Georgia, "Times New Roman", Times, serif;}
-button {cursor:pointer;text-transform:uppercase;color:white;font-family:"Fjalla One", sans-serif;font-weight:normal;background:transparent;border:solid 3px white;}
+button {cursor:pointer;text-transform:uppercase;color:black;font-family:"Fjalla One", sans-serif;font-weight:normal;background:transparent;border:solid 3px black;}
 a {color:black;text-decoration:none;}
 a:hover {color:#FAC200;}
 p a:hover {background-color:#FAC200;color:black;}
