--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -21,7 +21,7 @@ p a:hover {background-color:#FAC200;color:black;}
 .flexbox {display:-webkit-flex;display:-ms-flexbox;display:flex;overflow:hidden;}
 
 nav.breadcrumb {position:fixed;right:2em;top:45%;height:1px;font-size:12px;}
-nav.breadcrumb a {width:1em;height:1em;display:block;background-color:white;margin-bottom:0.5em;padding:0.2em;border-radius:100%;border:solid 2px white;text-align:right;position:relative;text-indent:99999px;overflow:hidden;}
+nav.breadcrumb a {width:1em;height:1em;display:block;background-color:white;margin-bottom:0.5em;padding:0.2em;border-radius:100%;border:solid 2px #333;text-align:right;position:relative;text-indent:99999px;overflow:hidden;}
 nav.breadcrumb a:hover, nav.breadcrumb a.selected {background-color:black;}
 
 /* Sections */
@@ -40,13 +40,13 @@ header div.intro p {float:left;width:100%;font-style:italic;font-size:2vw;line-h
 header div.intro p a {font-family:"Fjalla One", sans-serif;}
 header div.intro p strong {font-weight:normal;}
 header div.intro button {width:auto;font-size:2.4vw;padding:2% 10%;margin-top:0.5em;}
-header div.intro button:hover {border-color:#999;color:#999;}
+header div.intro button:hover {border-color:#333;color:#333;}
 header div.intro a.animated {float:right;margin-right:-30px;margin-top:50px;font-size:12px;text-align:center;}
 header div.intro a.animated i {display:block;font-size:4vw;}
 header div.intro a.animated:hover i {color:black;}
 header div.intro a.animated span {color:#FFF;font-size:1.2em;font-family:Georgia, "Times New Roman", Times, serif;}
 header div.intro a.animated span strong {display:block;font-size:3em;margin-top:-0.5em;}
-header div.intro a.animated:hover span, header div.intro a.animated:hover span strong {color:#999;}
+header div.intro a.animated:hover span, header div.intro a.animated:hover span strong {color:#333;}
 
 #bio {padding:5%;}
 #bio p.intro, #recent-work p, #stats p {font-size:28px;line-height:44px;width:60%;font-style:italic;text-align:center;margin:0 auto;border-top:3px solid black;padding-top:2em;margin-bottom:2em;max-width:740px;}
