--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -12,7 +12,7 @@ h1 {font-size:6vw;}
 h2 {font-size:24px;text-align:center;border-top:2px solid black;padding-top:0.5em;margin-bottom:0.5em;text-transform:uppercase;width:60%;margin:0 auto;max-width:780px;}
 h2 strong {font-weight:300;}
 h3 {font-size:20px;color:white;}
-p {font-size:18px;margin-bottom:32px;line-height:32px;font-family:Georgia, "Times New Roman", Times, serif;}
+p {font-size:18px;margin-bottom:32px;line-height:32px;font-family:"Domine", Georgia, "Times New Roman", Times, serif;}
 button {cursor:pointer;text-transform:uppercase;color:black;font-family:"Fjalla One", sans-serif;font-weight:normal;background:transparent;border:solid 3px black;}
 a {color:black;text-decoration:none;}
 a:hover {color:#FAC200;}
@@ -44,7 +44,7 @@ header div.intro button:hover {border-color:#333;color:#333;}
 header div.intro a.animated {float:right;margin-right:-30px;margin-top:50px;font-size:12px;text-align:center;}
 header div.intro a.animated i {display:block;font-size:4vw;}
 header div.intro a.animated:hover i {color:black;}
-header div.intro a.animated span {color:#FFF;font-size:1.2em;font-family:Georgia, "Times New Roman", Times, serif;}
+header div.intro a.animated span {color:#FFF;font-size:1.2em;font-family:"Domine", Georgia, "Times New Roman", Times, serif;}
 header div.intro a.animated span strong {display:block;font-size:3em;margin-top:-0.5em;}
 header div.intro a.animated:hover span, header div.intro a.animated:hover span strong {color:#333;}
 
@@ -58,7 +58,7 @@ header div.intro a.animated:hover span, header div.intro a.animated:hover span s
 
 #recent-work {background:url(../images/desk-angle.jpg) center top;background-size:cover;color:white;position:relative;float:left;width:100%;height:auto;text-align:center;-webkit-filter: grayscale(100%);filter: grayscale(100%);}
 #recent-work h2 {border-color:white;}
-#recent-work h2 a {font-family:Georgia, "Times New Roman", Times, serif;text-transform:lowercase;font-style:italic;background-color:#FAC200;color:black;}
+#recent-work h2 a {font-family:"Domine", Georgia, "Times New Roman", Times, serif;text-transform:lowercase;font-style:italic;background-color:#FAC200;color:black;}
 #recent-work h2 a:hover {color:white;}
 #recent-work h2, #recent-work h3, #recent-work a {color:white;}
 #recent-work p, #stats p {padding:0;border:none;clear:both;line-height:1.2em;margin-bottom:0;}
@@ -75,7 +75,7 @@ header div.intro a.animated:hover span, header div.intro a.animated:hover span s
 #work h4 {padding-bottom:0;}
 #work li a figure {position:relative;}
 #work li a figure img {width:100%;height:auto;-webkit-filter: grayscale(1); -webkit-filter: grayscale(100%);filter: gray; filter: grayscale(100%);filter: url(desaturate.svg#greyscale);border-bottom:solid 3px black;}
-#work li a figure figcaption {font-size:16px;opacity:0;margin-top:-5em;position:absolute;padding:1em;font-family:Georgia, "Times New Roman", Times, serif;font-style:italic;text-align:center;background-color:black;color:white;width:100%;}
+#work li a figure figcaption {font-size:16px;opacity:0;margin-top:-5em;position:absolute;padding:1em;font-family:"Domine", Georgia, "Times New Roman", Times, serif;font-style:italic;text-align:center;background-color:black;color:white;width:100%;}
 #work li a:hover, #work li a:focus {color:white;}
 #work li a:hover figure img, #work li a:focus figure img {-webkit-filter:none;-webkit-filter:none;filter:none;filter:none;filter:none;opacity:0;}
 #work li a figure img.replace {position:absolute;top:0;left:0em;opacity:0;-webkit-filter: blur(3px);filter:blur(3px);}
@@ -97,7 +97,7 @@ header div.intro a.animated:hover span, header div.intro a.animated:hover span s
 #personal li {display:inline;float:left;width:20%;height:50%;background-position:center center;background-repeat:no-repeat;background-size:cover;overflow:hidden;}
 #personal li a {float:left;background-color:#333;background-color:rgba(30, 30, 30, 0.7);width:100%;height:18vw;text-align:center;padding:5%;display:block;background-repeat:no-repeat;background-position:0 -1000px;background-size:100%;}
 #personal li:nth-child(even) a {background-color:#666;background-color:rgba(60, 60, 60, 0.7);}
-#personal li a strong {color:white;display:block;font-size:2em;font-family:Georgia, "Times New Roman", Times, serif;font-weight:normal;font-style:italic;margin-top:40%;}
+#personal li a strong {color:white;display:block;font-size:2em;font-family:"Domine",Georgia, "Times New Roman", Times, serif;font-weight:normal;font-style:italic;margin-top:40%;}
 #personal li a hr {width:10%;margin:0.5em auto 1em auto;border:none;border-top:2px solid #FAC200;}
 #personal li a:hover hr, #personal li a:focus hr {width:50%;border-color:black;}
 #personal li a small {opacity:0;font-size:1.2em;color:white;}
